--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,132 +1,111 @@
 .pokemons {
     display: grid;
+    list-style: none;
     grid-template-columns: 1fr;
     margin: 0;
     padding: 0;
-    list-style: none;
 }
-
 .normal {
     background-color: #a6a877;
 }
-
 .grass {
     background-color: #77c850;
 }
-
 .fire {
     background-color: #ee7f30;
 }
-
 .water {
     background-color: #678fee;
 }
-
 .electric {
     background-color: #f7cf2e;
 }
-
 .ice {
     background-color: #98d5d7;
 }
-
 .ground {
     background-color: #dfbf69;
 }
-
 .flying {
     background-color: #a98ff0;
 }
-
 .poison {
     background-color: #a040a0;
 }
-
 .fighting {
     background-color: #bf3029;
 }
-
 .psychic {
     background-color: #f65687;
 }
-
 .dark {
     background-color: #725847;
 }
-
 .rock {
     background-color: #b8a137;
 }
-
 .bug {
     background-color: #a8b720;
 }
-
 .ghost {
     background-color: #6e5896;
 }
-
 .steel {
     background-color: #b9b7cf;
 }
-
 .dragon {
     background-color: #6f38f6;
 }
-
 .fairy {
     background-color: #f9aec7;
 }
-
 .pokemon {
+    box-shadow: 10px 5px 5px gray;
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
-
 .pokemon .number {
-    color: #000;
-    opacity: .3;
+    color: #00000;
+    opacity: .4;
+    font-size: .800rem;
     text-align: right;
-    font-size: .625rem;
+    font-weigth: bold;
 }
-
 .pokemon .name {
-    text-transform: capitalize;
     color: #fff;
+    text-shadow: 3px 1px 1px gray;
+    text-transform: capitalize;
     margin-bottom: .25rem;
+    font-size: 2rem;
 }
 
 .pokemon .detail {
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
 }
-
 .pokemon .detail .types {
+    list-style: none;
     padding: 0;
     margin: 0;
-    list-style: none;
 }
-
 .pokemon .detail .types .type {
     color: #fff;
+    text-align: center;
+    filter: brightness(1.1);
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
-    text-align: center;
 }
-
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
 }
-
 .pagination {
     display: flex;
     flex-direction: row;
@@ -135,29 +114,66 @@
     width: 100%;
     padding: 1rem;
 }
-
 .pagination button {
+    background-color: #6c79db;
+    color: #000;
+    box-shadow: 2px 2px 5px gray;
+    border: none;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
+    font-size: .9rem;
     border-radius: 1rem;
 }
-
+.theme button {
+    background-color: #6c79db;
+    color: #000;
+    box-shadow: 5px 5px 5px gray;
+    border: none;
+    width: 4rem;
+    height: 4rem;
+    font-size: 1rem;
+    border-radius: 4rem;
+}
+.changeTheme{
+    .pokemon {
+        box-shadow: 1px 1px 10px #A9A9A9;
+        display: flex;
+        flex-direction: column;
+        margin: .5rem;
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+    .theme button {
+        background-color: #6c79db;
+        color: #fff;
+        box-shadow: 1px 1px 10px gray;
+        border: none;
+        width: 4rem;
+        height: 4rem;
+        font-size: 1rem;
+        border-radius: 4rem;
+    }
+    .pagination button {
+        background-color: #6c79db;
+        color: #fff;
+        box-shadow: 1px 1px 5px gray;
+        border: none;
+        margin: .25rem 0;
+        font-size: .625rem;
+        padding: .25rem .5rem;
+        border-radius: 1rem;
+    }
+}
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
     }
 }
-
 @media screen and (min-width: 576px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
-
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
