--- a/pokemon.css
+++ b/pokemon.css
@@ -104,7 +104,7 @@
     background-color: #ffffff96;
     align-content: center;
     margin: 1rem;
-    padding: 1rem;
+    padding: .9rem;
     border-radius: 1rem;
 }
 .pokemonDetail .detail .types {
