corrigir responsividade mobile

--- a/pokedex.css
+++ b/pokedex.css
@@ -166,7 +166,8 @@
 }
 @media screen and (min-width: 380px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
+        margin-right: 1rem;
     }
 }
 @media screen and (min-width: 576px) {
